# HoshinoWeaver

./: .gitattributes  .gitignore  CLAUDE.md  HoshinoWeaver desktop.py  README.md  launcher.py  launcher2.0.py  make_package.py  requirements-dev.txt  requirements.txt  settings.yaml  test_noise_equalization.py
.github/workflows/: test.yaml
bench/: README.md  common.py  requirements.txt
bench/cpu/: __init__.py  alignment.py  fgp_accumulate.py  kernels.py  max_stack.py  mean_stack.py
bench/data/: README.md
bench/data_tools/: __init__.py  generate_array_cache.py  generate_dataset.py  generate_starfield_dataset.py  starfield.py
bench/gpu/: __init__.py  compare_homography.py  compare_remap.py  original_homography.py  original_remap.py  triton_homography.py  triton_remap.py
csrc/: CMAKE_MIGRATION.md  CMakeLists.txt  CMakePresets.json  README.md  build_ops.py  module.cpp  requirements.txt
csrc/cmake/: HnwCompiler.cmake  HnwCuda.cmake  HnwOpenMP.cmake  HnwOptions.cmake  HnwPython.cmake
csrc/common/: backend_info.cpp  backend_info.h  compat.h
csrc/ops/alignment/: alignment_ops.cpp  alignment_ops.h
csrc/ops/cuda/: camera_model_remap_fused_ops.cpp  camera_model_remap_fused_ops.cu  camera_model_remap_fused_ops.h
csrc/ops/fgp/: fgp_ops.cpp  fgp_ops.h
csrc/ops/filter/: filter_ops.cpp  filter_ops.h
csrc/ops/max/: max_ops.cpp  max_ops.h
csrc/ops/median/: median_ops.cpp  median_ops.h
csrc/ops/noise/: noise_ops.cpp  noise_ops.h
csrc/ops/sigma_clip/: sigma_clip_chunk_ops.cpp  sigma_clip_chunk_ops.h
csrc/ops/wavelet/: wavelet_ops.cpp  wavelet_ops.h
docs/: README-en.md  README.md  bundle_adjustment_and_stabilization.md  dag_engine.md  dag_node_definition.md  dev-log.md  framework_refactor_notes.md  meta_yaml_v2_spec.md  multi_process.md  noise-equalization.md  op.md  satellite_clean_beta_stability_plan.md  time_cost.md  ui_terminology_guidelines.md  update-log.md  update_log.md
docs/manual/: manual_cn.md
ezlib/: __init__.py  imgfio.py  merger.py  trailstacker.py  utils.py
hoshicore/: default_settings.yaml
hoshicore/_custom_op/: __init__.py  _dispatch.py  api.py  backend_registry.py  thread_tuning.py
hoshicore/component/: args.py  calibration.py  (+17 more)
starlib/: stardetect.py  starshrink.py
test/: test_file_cache_queue.py  test_overflow.py
tests/: conftest.py  test_custom_ops.py  test_custom_ops_remap.py  test_custom_ops_wavelet.py  test_prune.py  test_yaml_loader.py
ui/: UI.py  UILibs.py  UIUtils.py  about_dialog.py  global_settings_dialog.py  output_panel.py  output_presets.py  panel_builder.py  styles.py  transforms.py  widgets.py  yaml_loader.py
(+109 files in other folders)
